--- a/hugo.yaml
+++ b/hugo.yaml
@@ -51,7 +51,8 @@ params:
   authorimage: ../assets/images/global/author.webp
   og_image: /images/limouziCoDev.jpg
   moto: "La communauté Craft en Limousin"
-  description: "Partageons nos expériences et faisons bouger ensemble la COmmunauté de DEVeloppement logiciel dans le Limousin ! \n
+  title: "Communauté de développeurs en Limousin"
+  description: "Partageons nos expériences et faisons bouger ensemble la COmmunauté de DEVeloppement logiciel à Limoges ! \n
 Curieuses, curieux, quelle que soit votre expérience, venez échanger avec des personnes partageant le même intérêt que vous pour le développement."
   disable_theme_toggle: false
   disable_stay_uptodate: false
