--- a/hugo.yaml
+++ b/hugo.yaml
@@ -57,6 +57,21 @@ Curieuses, curieux, quelle que soit votre expérience, venez échanger avec des 
   disable_theme_toggle: false
   disable_stay_uptodate: false
 
+  #p1:
+    #heading: "Qu'est-ce que le craft ?"
+    #image: "images/pages/our-mission.png"
+    #content:
+      #- text: "Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed consectetur neque tristique pellentesque. Blandit amet, sed aenean erat arcu morbi. Cursus faucibus nunc nisl netus morbi vel porttitor vitae ut. Amet vitae fames senectus vitae."
+      #- text: "Sollicitudin tristique eros erat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna. Sollicitudin tristique eroserat odio sed vitae, consequat turpis elementum. Lorem nibh vel, eget pretium arcu vitae. Eros eu viverra donec ut volutpat donec laoreet quam urna."
+      #- text: "Rhoncus nisl, libero egestas diam fermentum dui. At quis tincidunt vel ultricies. Vulputate aliquet velit faucibus semper. Pellentesque in venenatis vestibulum consectetur nibh id. In id ut tempus egestas. Enim sit aliquam nec, a. Morbi enim fermentum lacus in. Viverra."
+  p2:
+    heading: "Accompagnée par l'ALIPTIC"
+    image: "images/pages/aliptic.png"
+    content:
+      - text: "L'Association Limousine des Professionnels des Technologies de l'Information et de la Communication fédère les acteurs du numérique en Limousin afin de favoriser leur développement et leur visibilité."
+      - text: "Nous les remercions pour leur accueil et leur soutien logistique, nos événements ayant souvent lieu dans leurs locaux."
+
+
   social_media:
     github:
       enabled: true
